--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,26 +2,47 @@
 	<html>
 		<head>
 			<title>{{ page.title }} | Eugenio Felix</title>
-			<!-- link to main stylesheet -->
+			<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
-			<nav>
-	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	    		</ul>
+			<nav class="navbar-fixed-top">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-4">
+							<h1>Eugenio Felix</h1>
+						</div>
+						<div class="col-sm-8">
+				    		<ul>
+				        		<li><a href="/">Home</a></li>
+					        	<li><a href="/about">About</a></li>
+				        		<li><a href="/resume">Resumé</a></li>
+				    		</ul>
+				    	</div>
+	    			</div>
+	    		</div>
 			</nav>
 			<div class="container">
-			
-			{{ content }}
-			
-			</div><!-- /.container -->
-			<footer>
-	    		<ul>
-	        		<li><a href="mailto:eugeniofr11@gmail.com">email</a></li>
-				</ul>
+				<div class="row" id="main-content">
+					<div class="col-md-12">
+						{{ content }}
+					</div>
+				</div>
+			</div>
+			<footer class="footer">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-12">
+							<ul>
+				        		<li><a href="mailto:eugeniofr11@gmail.com">eugeniofr11@gmail.com</a></li>
+					        	<li><a href="http://www.behance.net/eugeniofr">behance.net/eugeniofr</a></li>
+				    		</ul>
+						</div>
+					</div>
+				</div>
 			</footer>
+
+		<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+		<script src="/js/bootstrap.min.js"></script>
 		</body>
 	</html>
