--- a/css/main.css
+++ b/css/main.css
@@ -1,43 +1,68 @@
+/* Global */
 body {
-    margin: 60px auto;
-    width: 70%;
+    font-family: 'Ubuntu', Sans-Serif;
+    color: #3d3d3d;
 }
+
 nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family: 'Aleo', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
 }
 nav ul li, footer ul li {
     display: inline;
-    margin-right: 20px;
+    margin: 0 2em;
 }
+
 a {
     text-decoration: none;
-    color: #999;
+    color: inherit;
 }
+
 a:hover {
     text-decoration: underline;
+    color: inherit;
 }
+
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family: 'Aleo', 'Arial', 'Sans-Serif';
 }
+
 p {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
 }
+
+#main-content {
+    height: 100vh;
+    margin-top: 9em;
+    min-height: 65em;
+    margin-bottom: 100px;
+}
+
+/* Navigation */
+nav {
+    background-color: #3d3d3d;
+    color: #ffffff;
+    text-align: right;
+    height: 7em;
+}
+
+nav ul {
+    margin-top: 2.8em;
+}
+
+/* Footer */
 footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
-}
-
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
-}
-
-ul.posts li {
-    list-style: none;
+    background-color: #3d3d3d;
+    padding: 2em;
+    color: #ffffff;
+    height: 5em;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
 }
