--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -37,7 +37,7 @@
 
 // Palette.
 	$palette: (
-		bg:					#2e3842,
+		bg:					#ee3c2d,
 		fg:					#fff,
 		fg-bold:			#fff,
 		fg-light:			rgba(255,255,255,0.5),
@@ -47,10 +47,10 @@
 		border2-bg:			rgba(144,144,144,0.5),
 
 		accent1: (
-			bg:				#21b2a6,
-			fg-bold:		#ffffff,
-			fg:				mix(#21b2a6, #ffffff, 25%),
-			fg-light:		mix(#21b2a6, #ffffff, 40%),
+			bg:				#f3f3f3,
+			fg-bold:		#393939,
+			fg:				mix(#393939, #ffffff, 25%),
+			fg-light:		mix(#393939, #ffffff, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
@@ -58,7 +58,7 @@
 		),
 
 		accent2: (
-			bg:				#00ffcc,
+			bg:				#ee3c2d,
 			fg-bold:		#ffffff,
 			fg:				mix(#00ffcc, #ffffff, 25%),
 			fg-light:		mix(#00ffcc, #ffffff, 40%),
@@ -69,7 +69,7 @@
 		),
 
 		accent3: (
-			bg:				#00f0ff,
+			bg:				#ee3c2d,
 			fg-bold:		#ffffff,
 			fg:				mix(#00f0ff, #ffffff, 25%),
 			fg-light:		mix(#00f0ff, #ffffff, 40%),
@@ -80,7 +80,7 @@
 		),
 
 		accent4: (
-			bg:				#76ddff,
+			bg:				#ee3c2d,
 			fg-bold:		#ffffff,
 			fg:				mix(#76ddff, #ffffff, 25%),
 			fg-light:		mix(#76ddff, #ffffff, 40%),
@@ -91,7 +91,7 @@
 		),
 
 		accent5: (
-			bg:				#505393,
+			bg:				#393939,
 			fg-bold:		#ffffff,
 			fg:				mix(#505393, #ffffff, 25%),
 			fg-light:		mix(#505393, #ffffff, 40%),
@@ -102,7 +102,7 @@
 		),
 
 		accent6: (
-			bg:				#ed4933,
+			bg:				#ee3c2d,
 			fg-bold:		#ffffff,
 			fg:				mix(#ed4933, #ffffff, 25%),
 			fg-light:		mix(#ed4933, #ffffff, 40%),
@@ -114,9 +114,9 @@
 
 		accent7: (
 			bg:				#ffffff,
-			fg-bold:		#2E3842,
-			fg:				#4E4852,
-			fg-light:		#8E8892,
+			fg-bold:		#393939,
+			fg:				#393939,
+			fg-light:		#393939,
 			border:			#dfdfdf,
 			border-bg:		rgba(0,0,0,0.0375),
 			border2:		#bfbfbf,
