--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,8 +8,7 @@
         <div id="menu">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a href="resume.html">Resumé</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
