--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="resume.html">Resumé</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <!-- <li><a href="contact.html">Contact</a></li> -->
           </ul>
         </div>
       </li>
